# yt-backup

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  readme.md  yt-dlp.config
src/: config.rs  download.rs  link.rs  main.rs
