[package]
name = "yt-backup"
version = "0.0.1"
edition = "2021"
authors = ["Mark Tuddenham <mark@tudders.com>"]
description = "Backup youtube channels and playlists"
license = "MIT"
repository = "https://github.com/MarkTuddenham/yt-backup"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
